2011-12-06 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c (na_core_utils_dir_list_perms): New function.

	* src/nact/nact-tree-model-dnd.c (drop_uri_list):
	Fix and improve error messages during drop operations.

	Fix a coredump when trying to import an empty file by DnD.
	Extend the fix by checking the size and the type of the candidate.

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c (na_core_utils_file_is_loadable): New function.

	* src/api/na-iimporter.h (IMPORTER_CODE_NOT_LOADABLE): New return code.

	* src/core/na-importer.c (import_from_uri):
	Do not try other modules one the first detects that a file is not loadable.

	* src/io-desktop/nadp-desktop-file.c (nadp_desktop_file_new_from_uri):
	* src/io-desktop/nadp-reader.c (nadp_reader_iimporter_import_from_uri):
	* src/io-xml/naxml-reader.c (naxml_reader_import_from_uri):
	Check whether the file is loadable before trying to import it.

	* src/nact/nact-main-tab.h:
	* src/nact/nact-main-window.h: Fix comments.

	* src/nact/nact-main-window.c: Fix typo.

	* src/nact/nact-tree-model.c (nact_tree_model_new):
	No more connect to base-window-initialize-gtk signal.
	Initialize model without waiting for signal triggering.

	* src/nact/nact-tree-view.c (instance_constructed):
	No more connect to base-window-initialize-gtk signal.

2011-12-05 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-importer-ask.c (import_ask_new):
	* src/nact/nact-add-capability-dialog.c (on_base_initialize_gtk_toplevel):
	* src/nact/nact-add-capability.ui:
	* src/nact/nact-add-scheme-dialog.c (on_base_initialize_gtk_toplevel):
	* src/nact/nact-add-scheme.ui:
	* src/nact/nact-export-ask.c (on_base_initialize_gtk_toplevel):
	* src/nact/nact-icon-chooser.c (on_base_initialize_gtk_toplevel):
	* src/nact/nact-icon-chooser.ui:
	* src/nact/nact-preferences-editor.c (on_base_initialize_gtk_toplevel):
	Remove (deprecated since 2.22) 'has_separator' property from GtkDialog.
