@@ -1,5 +1,10 @@
 2011-12-06 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/core/na-settings.c (settings_new):
+	* src/io-desktop/nadp-writer.c
+	(nadp_iio_provider_is_able_to_write, nadp_iio_provider_write_item):
+	Fix permissions when creating the configuration directory.
+
 	* src/api/na-core-utils.h:
 	* src/core/na-core-utils.c (na_core_utils_dir_list_perms): New function.
 
